--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -3,8 +3,7 @@
 
 html,
 body,
-#app,
-.App {
+#app {
   width: 100%;
   height: 100%;
   background: url('https://images.unsplash.com/16/unsplash_525d7892901ff_1.JPG') no-repeat center center fixed;
@@ -15,10 +14,15 @@ body,
   font-family: 'Roboto', sans-serif;
 }
 
+.App {
+  background: rgba(0,0,0,0.7);
+  width: 100%;
+  height: 100%;
+}
+
 .Home {
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.7);
   padding-top: 12rem;
 
   > h2 {
@@ -55,6 +59,14 @@ body,
   border: 1px solid #EEE;
   height: 50px;
   color: #EEE;
+}
+
+.RoomResult {
+  background: #FCFCFC;
+  color: #111;
+  margin-top: 10px;
+  border-radius: 10px;
+  padding: 15px;
 }
 
 @media (max-width: 420px) {
