--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -32,6 +32,27 @@ body,
     font-size: 2.5rem;
     text-align: center;
   }
+
+  > h4 {
+    color: #EEE;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 2.0rem;
+    text-align: center;
+  }
+}
+
+.spinner-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  > i {
+    margin-top: 1.5rem;
+    color: white;
+  }
 }
 
 .RoomForm {
@@ -77,4 +98,10 @@ body,
       font-size: 1.5rem;
     }
   }
+}
+
+.loading-text {
+  color: #EEE;
+  text-align: center;
+  margin-top: 1.5rem;
 }
