--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,29 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
 
+$card_bg: #FFF;
+
 html,
-body,
+body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Roboto', sans-serif;
+  background-color: #F0f0f0
+}
 #app {
   width: 100%;
   height: 100%;
-  background: url('https://images.unsplash.com/16/unsplash_525d7892901ff_1.JPG') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  font-family: 'Roboto', sans-serif;
+
 }
 
 .App {
-  background: rgba(0,0,0,0.7);
   width: 100%;
   height: 100%;
 }
 
 .Home {
-  width: 100%;
-  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url('/public/img/lecture.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 100vw;
+  // min-height: 100vh;
   padding-top: 12rem;
+  padding-bottom: 12rem;
+  overflow: auto;
 
   > h2 {
     color: #EEE;
@@ -83,11 +92,37 @@ body,
 }
 
 .RoomResult {
-  background: #FCFCFC;
+  // background: $card_bg;
   color: #111;
-  margin-top: 10px;
-  border-radius: 10px;
-  padding: 15px;
+  // box-shadow: 0 4px 8px #ddd;
+  // margin-top: 10px;
+  // border-radius: 4px;
+  // padding: 15px;
+  font-family: 'Roboto', sans-serif;
+
+  h3,
+  h4 {
+    font-family: 'Open Sans', sans-serif;
+  }
+}
+
+.ResultsWrapper {
+  position: relative;
+  top: -6rem;
+
+  .Results {
+    margin-top: 10px;
+    background: $card_bg;
+    color: #111;
+    box-shadow: 0 4px 8px #ddd;
+    margin-top: 10px;
+    border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+
+    &:first-of-type {
+      margin-top: 7rem;
+    }
+  }
 }
 
 @media (max-width: 420px) {
@@ -100,8 +135,30 @@ body,
   }
 }
 
+.hidden {
+  display: none;
+}
+
 .loading-text {
   color: #EEE;
   text-align: center;
   margin-top: 1.5rem;
+  position: absolute;
+  left: 50%;
+  top: 0;
+
+  img {
+    transform: translateX(-50%);
+  }
+}
+
+.Center {
+  text-align: center;
+  font-size: 20px;
+}
+
+.RoomResult {
+  margin-top: 0;
+  padding: 15px;
+  border-bottom: 2px solid #666;
 }
