--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -152,12 +152,20 @@ body {
   }
 }
 
-.Center {
+.RoomName--right {
   text-align: center;
   font-size: 20px;
   position: absolute;
   right: 15px;
-  top: 40%;
+  top: 38%;
+}
+
+.Center {
+  text-align: center;
+}
+
+.RoomResult:hover {
+  background-color: #f7f7f7;
 }
 
 .RoomResult {
@@ -217,4 +225,7 @@ body {
 }
 .right {
   float: right;
+}
+.hover-pointer:hover {
+  cursor: pointer;
 }
