--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -111,6 +111,10 @@ body {
       border: none;
       color: #FCFCFC;
       border-radius: 4px;
+
+      > option {
+        color: #111;
+      }
     }
   }
 }
