--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -45,7 +45,8 @@ body {
   overflow: auto;
 
   h2,
-  h4 {
+  h4,
+  p {
     color: #EEE;
     // font-family: 'Open Sans', sans-serif;
     font-family: 'Montserrat', sans-serif;
@@ -56,6 +57,9 @@ body {
   }
   h4 {
     font-size: 2.0rem;
+  }
+  p {
+    font-size: 1.5rem;
   }
 
 
@@ -96,6 +100,12 @@ body {
   h4 {
     @media screen and (max-width: $mobile_breakpoint) {
       font-size: 1.6rem;
+    }
+  }
+
+  p {
+    @media screen and (max-width: $mobile_breakpoint) {
+      font-size: 1rem;
     }
   }
 }
@@ -270,4 +280,13 @@ body {
 .Home__disclaimer {
   color: #c55;
   text-align: center;
+}
+
+.Wrapper {
+  width: 50%;
+  margin: 0 auto;
+
+  @media screen and (max-width: $mobile_breakpoint) {
+    width: 80%;
+  }
 }
