--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -282,11 +282,11 @@ body {
   text-align: center;
 }
 
-.Wrapper {
-  width: 50%;
-  margin: 0 auto;
-
-  @media screen and (max-width: $mobile_breakpoint) {
-    width: 80%;
-  }
-}
+// .Wrapper {
+//   width: 50%;
+//   margin: 0 auto;
+//
+//   @media screen and (max-width: $mobile_breakpoint) {
+//     width: 80%;
+//   }
+// }
