--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -312,11 +312,11 @@ body {
   display: block;
 }
 
-.Wrapper {
-  width: 50%;
-  margin: 0 auto;
+// .Wrapper {
+//   width: 50%;
+//   margin: 0 auto;
 
-  @media screen and (max-width: $mobile_breakpoint) {
-    width: 80%;
-  }
-}
+//   @media screen and (max-width: $mobile_breakpoint) {
+//     width: 80%;
+//   }
+// }
