Add GitHub Ribbon

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -38,8 +38,9 @@ body {
   -o-background-size: cover;
   background-size: cover;
   width: 100vw;
+  min-height: 100vh;
   padding-top: 15vh;
-  padding-bottom: 34vh;
+  padding-bottom: 50px;
   overflow: auto;
 
   h2,
@@ -320,3 +321,32 @@ body {
 //     width: 80%;
 //   }
 // }
+
+// GitHub Corner CSS
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out;
+}
+
+@keyframes octocat-wave {
+  0%,100% {
+    transform: rotate(0);
+  }
+  
+  20%,60% {
+    transform: rotate(-25deg);
+  }
+  
+  40%,80% {
+    transform: rotate(10deg);
+  }
+}
+
+@media (max-width:500px) {
+  .github-corner:hover .octo-arm {
+    animation: none;
+  }
+  
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out;
+  }
+}
