--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -17,9 +17,10 @@ body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   font-family: 'Montserrat', sans-serif;
-  background-color: #F0f0f0
+  background-color: #F0f0f0;
+  font-size: 14px;
 }
-#app {
+#root {
   width: 100%;
   height: 100%;
 }
@@ -31,7 +32,7 @@ body {
 
 .Home {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url('/public/img/lecture.jpg') no-repeat center center fixed;
+    url('/img/lecture.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -124,17 +125,23 @@ body {
 
   label {
     color: #B2B2B2;
+  }
 
-    > select {
-      background-color: rgba(255,255,255,0.2);
-      border: none;
-      color: #FCFCFC;
-      border-radius: 4px;
+  select {
+    width: 100%;
+    background-color: rgba(255,255,255,0.2);
+    border: none;
+    color: #FCFCFC;
+    border-radius: 4px;
 
-      > option {
-        color: #111;
-      }
+    > option {
+      color: #111;
     }
+  }
+
+  &-elem {
+    width: 100%;
+    margin-bottom: 15px;
   }
 }
 
