--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -37,11 +37,13 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding-top: 15vh;
   padding-bottom: 50px;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
+  box-sizing: border-box;
 
   h2,
   h4,
@@ -94,32 +96,6 @@ body {
   }
 }
 
-.Home--content {
-  h2 {
-    @media screen and (max-width: $mobile_breakpoint) {
-      font-size: 2rem;
-    }
-  }
-
-  h4 {
-    @media screen and (max-width: $mobile_breakpoint) {
-      font-size: 1.6rem;
-    }
-  }
-
-  h5 {
-    @media screen and (max-width: $mobile_breakpoint) {
-      font-size: 1.4rem;
-    }
-  }
-
-  p {
-    @media screen and (max-width: $mobile_breakpoint) {
-      font-size: 1rem;
-    }
-  }
-}
-
 .RoomForm__form {
   width: 100%;
 
@@ -169,16 +145,6 @@ body {
 
     &:first-of-type {
       margin-top: 7rem;
-    }
-  }
-}
-
-@media (max-width: 420px) {
-  .Home {
-    // padding-top: 6.5rem;
-
-    > h2 {
-      font-size: 1.5rem;
     }
   }
 }
@@ -300,14 +266,11 @@ body {
 .emphasis {
   font-weight: bold;
 }
+
 .right {
   float: right;
 }
-@media screen and (max-width: $mobile_breakpoint) {
-  .hide-small {
-    display: none;
-  }
-}
+
 .hover-pointer:hover {
   cursor: pointer;
 }
@@ -324,14 +287,12 @@ body {
   display: block;
 }
 
-// .Wrapper {
-//   width: 50%;
-//   margin: 0 auto;
-
-//   @media screen and (max-width: $mobile_breakpoint) {
-//     width: 80%;
-//   }
-// }
+.Wrapper {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 // GitHub Corner CSS
 .github-corner:hover .octo-arm {
@@ -352,12 +313,38 @@ body {
   }
 }
 
-@media (max-width:500px) {
+@media (max-width: $mobile_breakpoint) {
   .github-corner:hover .octo-arm {
     animation: none;
   }
   
   .github-corner .octo-arm {
     animation: octocat-wave 560ms ease-in-out;
+  }
+
+  .hide-small {
+    display: none;
+  }
+  
+  .Home {
+    padding-top: 3rem;
+
+    font-size: 12px;
+
+    h2 {
+      font-size: 2rem;
+    }
+
+    h4 {
+      font-size: 1.4rem;
+    }
+
+    h5 {
+      font-size: 1.2rem;
+    }
+
+    p {
+      font-size: 1rem;
+    }
   }
 }
